Removes application source from docker project git
Also adds local config

--- a/local_config/tofumine.conf
+++ b/local_config/tofumine.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     server_name www.tofumine-docker.com;
-    root /home/app/tofumine/public;
+    root /u/tofumine/public;
 
     passenger_enabled on;
     passenger_user rubyapps;
