--- a/local_config/tofumine.conf
+++ b/local_config/tofumine.conf
@@ -2,11 +2,12 @@ server {
     listen 80;
     server_name www.tofumine-docker.com;
     root /u/tofumine/public;
+    rails_env development;
 
     passenger_enabled on;
     passenger_user rubyapps;
 
-    passenger_ruby /usr/bin/ruby;
+    passenger_ruby /usr/bin/ruby2.2;
 
 
     # If this is a Ruby app, specify a Ruby version:
