Add simple Flux

--- a/tofumine/Gemfile
+++ b/tofumine/Gemfile
@@ -21,7 +21,10 @@ gem 'jbuilder', '~> 2.0'
 gem 'ancestry'          # quickly and easily model trees
 gem 'rails_admin'       # quickly build interface to add/remove records
 gem 'foundation-rails'
+
 gem 'react-rails'
+gem 'flux-rails-assets'
+gem 'lodash-rails'
 
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
