Add sprockets-es6 gem

--- a/tofumine/Gemfile
+++ b/tofumine/Gemfile
@@ -25,6 +25,7 @@ gem 'foundation-rails'
 gem 'react-rails'
 gem 'flux-rails-assets'
 gem 'lodash-rails'
+gem 'sprockets-es6'
 
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
